k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: axell13/hello-go

          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 500m
              memory: 25Mi

          startupProbe: # just checks until pod is ready, after that, readiness and liveness start
            httpGet:
              path: /healthz
              port: 3002
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 3002
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3002
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 10

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
            - mountPath: "/go/pvc"
              name: goserver-pvc
      volumes:
        - name: goserver-pvc
          persistentVolumeClaim:
            claimName: goserver-pvc
        - name: config
          configMap:
            name: goserver-configmap-family
            items:
              - key: members
                path: "family.txt"
