k8s/mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None

# Now I can go to my Go application pod and ping the mysql pods with:
# ping mysql-0.mysql-headless
# ping mysql-1.mysql-headless
