k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
    - name: goserver-service
      port: 80
      targetPort: 3002
      protocol: TCP
